[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kvmboi"
version = "0.1.0"
description = "Python library for controlling GL.iNet Comet KVM (PiKVM-compatible) devices"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27",
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
